config/webhook/supply_chain_webhook.yaml
# Copyright 2021 VMware
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: clustersupplychainvalidator
  annotations:
    cert-manager.io/inject-ca-from: cartographer-system/cartographer-webhook
webhooks:
  - name: supply-chain-validator.cartographer.com
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["carto.run"]
        apiVersions: ["v1alpha1"]
        resources: ["clustersupplychains"]
        scope: "Cluster"
    clientConfig:
      service:
        name: cartographer-webhook
        namespace: cartographer-system
        path: /validate-carto-run-v1alpha1-clustersupplychain
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
